--- a/fimco/pochi/templates/pochi/home.html
+++ b/fimco/pochi/templates/pochi/home.html
@@ -21,7 +21,7 @@
                     </div>
                 </div>
             </div>
-            {% if pendings %}
+            {% if transactions %}
                 <div class="row margin-top-20 mid-align">
                     <div class="panel panel-default">
                         <div class="panel-heading text-center">
@@ -37,22 +37,28 @@
                                     <thead>
                                         <tr>
                                             <th>Date</th>
+                                            <th>Transaction ID</th>
                                             <th>Service</th>
                                             <th>Channel</th>
                                             <th>Mode</th>
                                             <th>Amount</th>
                                             <th>Charges</th>
+                                            <th>Dst. Account</th>
+                                            <th>Status</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         {% for transaction in transactions %}
                                             <tr>
                                                 <td>{{ transaction.full_timestamp }}</td>
+                                                <td>{{ transaction.trans_id }}</td>
                                                 <td>{{ transaction.service }}</td>
                                                 <td>{{ transaction.channel }}</td>
                                                 <td>{{ transaction.mode }}</td>
                                                 <td>{{ transaction.amount }}</td>
                                                 <td>{{ transaction.charge }}</td>
+                                                <td>{{ transaction.dst_account }}</td>
+                                                <td>{{ transaction.status }}</td>
                                             </tr>
                                         {% endfor %}
                                     </tbody>
