--- a/fimco/fimcosite/templates/login.html
+++ b/fimco/fimcosite/templates/login.html
@@ -69,7 +69,7 @@
                                         <div class="col-md-6 col-sm-6 col-xs-6">
                                             <!-- Inform Tip -->
                                             <div class="form-tip pt-20">
-                                                <a class="no-text-decoration fs-13 mt-10 block" href="#">Forgot Password?</a>
+                                                <a class="no-text-decoration fs-13 mt-10 block" href="{% url 'forgot' %}">Forgot Password?</a>
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-sm-6 col-xs-6">
@@ -145,7 +145,7 @@
                                         <div class="col-md-6 col-sm-6 col-xs-6">
                                             <!-- Inform Tip -->
                                             <div class="form-tip">
-                                                <a class="no-text-decoration fs-13 mt-10 block" href="#">Forgot Password?</a>
+                                                <a class="no-text-decoration fs-13 mt-10 block" href="{% url 'forgot' %}">Forgot Password?</a>
                                             </div>
                                         </div>
                                     </div>
