--- a/fimco/pochi/templates/pochi/create_group.html
+++ b/fimco/pochi/templates/pochi/create_group.html
@@ -7,26 +7,34 @@
         <div id="content" class="dashboard padding-20">
             <div class="page-profile">
                 <div class="row">
-                    <div id="success" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-sm">
-                            <div class="modal-content">
-                                <div class="modal-body modal-success text-center">
-                                    <p><strong><i class="glyphicon glyphicon-thumbs-up"></i> {{ message }}</strong></p>
-                                    <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
+                    {% if messages %}
+                        {% for message in messages %}
+                            {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+                                <div id="success" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog modal-sm">
+                                        <div class="modal-content">
+                                            <div class="modal-body modal-success text-center">
+                                                <p><strong><i class="glyphicon glyphicon-thumbs-up"></i> {{ message }}</strong></p>
+                                                <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="error" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-sm">
-                            <div class="modal-content">
-                                <div class="modal-body modal-danger text-center">
-                                    <p><strong><i class="glyphicon glyphicon-thumbs-down"></i> {{ message }}</strong></p>
-                                    <button type="button" class="btn btn-danger" data-dismiss="modal">OK</button>
+                            {% elif message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                                <div id="error" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog modal-sm">
+                                        <div class="modal-content">
+                                            <div class="modal-body modal-danger text-center">
+                                                <p><strong><i class="glyphicon glyphicon-thumbs-down"></i> {{ message }}</strong></p>
+                                                <button type="button" class="btn btn-danger" data-dismiss="modal">OK</button>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+
                 </div>
                 <div class="row">
                     <!-- COL 1 -->
@@ -140,7 +148,7 @@
 {% block scripts %}
     <script src="https://cdn.jsdelivr.net/npm/formvalidation@0.6.2-dev/dist/js/formValidation.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/formvalidation@0.6.2-dev/dist/js/framework/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/static/pochi/plugins/bootstrap/js/bootstrap.min.js"></script>
+{#    <script type="text/javascript" src="/static/pochi/plugins/bootstrap/js/bootstrap.min.js"></script>#}
     <script>
         var existingMembers = [];
 
