--- a/fimco/pochi/templates/pochi/earnings.html
+++ b/fimco/pochi/templates/pochi/earnings.html
@@ -14,7 +14,13 @@
                         <div class="modal-content">
                             <div class="modal-body modal-info text-center">
                                 {% if page == 'rates' %}
-                                    <p><strong><i class="glyphicon glyphicon-info-sign"></i> {{ message }}</strong></p>
+                                    {% if messages %}
+                                        {% for message in messages %}
+                                            {% if message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
+                                                <p><strong><i class="glyphicon glyphicon-info-sign"></i> {{ message }}</strong></p>
+                                            {% endif %}
+                                        {% endfor %}
+                                    {% endif %}
                                 {% else %}
                                     <p>
                                         <strong>
@@ -207,7 +213,7 @@
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs/dt-1.10.16/r-2.2.1/sc-1.4.3/datatables.min.js">
     </script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-    <script type="text/javascript" src="/static/pochi/plugins/bootstrap/js/bootstrap.min.js"></script>
+{#    <script type="text/javascript" src="/static/pochi/plugins/bootstrap/js/bootstrap.min.js"></script>#}
     <script type="text/javascript">
         {% if page == 'rates' %}
             var id="ratesChart";
