--- a/fimco/pochi/templates/pochi/group_activity.html
+++ b/fimco/pochi/templates/pochi/group_activity.html
@@ -3,37 +3,45 @@
     <section id="middle">
         <div id="content" class="padding-20">
             <div class="row">
-                <div id="success" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-sm">
-                        <div class="modal-content">
-                            <div class="modal-body modal-success text-center">
-                                <p><strong><i class="glyphicon glyphicon-thumbs-up"></i> {{ message }}</strong></p>
-                                <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
+                {% if messages %}
+                    {% for message in messages %}
+                        {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+                            <div id="success" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-sm">
+                                    <div class="modal-content">
+                                        <div class="modal-body modal-success text-center">
+                                            <p><strong><i class="glyphicon glyphicon-thumbs-up"></i> {{ message }}</strong></p>
+                                            <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="info" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-sm">
-                        <div class="modal-content">
-                            <div class="modal-body modal-info text-center">
-                                <p><strong><i class="glyphicon glyphicon-info-sign"></i> {{ message }}</strong></p>
-                                <a href="{% url 'confirm' %}" class="btn btn-info btn-sm">Proceed transfer</a>
-                                <button type="button" class="btn btn-info" data-dismiss="modal">OK</button>
+                        {% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
+                            <div id="info" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-sm">
+                                    <div class="modal-content">
+                                        <div class="modal-body modal-info text-center">
+                                            <p><strong><i class="glyphicon glyphicon-info-sign"></i> {{ message }}</strong></p>
+                                            <a href="{% url 'confirm' %}" class="btn btn-info btn-sm">Proceed transfer</a>
+                                            <button type="button" class="btn btn-info" data-dismiss="modal">OK</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="error" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-sm">
-                        <div class="modal-content">
-                            <div class="modal-body modal-danger text-center">
-                                <p><strong><i class="glyphicon glyphicon-thumbs-down"></i> {{ message }}</strong></p>
-                                <button type="button" class="btn btn-danger" data-dismiss="modal">OK</button>
+                        {% elif message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                            <div id="error" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-sm">
+                                    <div class="modal-content">
+                                        <div class="modal-body modal-danger text-center">
+                                            <p><strong><i class="glyphicon glyphicon-thumbs-down"></i> {{ message }}</strong></p>
+                                            <button type="button" class="btn btn-danger" data-dismiss="modal">OK</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
+                        {% endif %}
+                    {% endfor %}
+                {% endif %}
             </div>
             <div class="row">
                 <div class="col-lg-6 col-centered">
@@ -77,7 +85,7 @@
     </section>
 {% endblock %}
 {% block scripts %}
-    <script type="text/javascript" src="/static/pochi/plugins/bootstrap/js/bootstrap.min.js"></script>
+{#    <script type="text/javascript" src="/static/pochi/plugins/bootstrap/js/bootstrap.min.js"></script>#}
     <script type="text/javascript">
         $('#account-section').hide();
         var choice = $("#account_choice");
