--- a/fimco/pochi/templates/pochi/main.html
+++ b/fimco/pochi/templates/pochi/main.html
@@ -25,11 +25,14 @@
 		<link href="/static/pochi/css/layout.css" rel="stylesheet" type="text/css" />
 
         <link href="/static/css/main.css" rel="stylesheet" type="text/css" />
+        <link href="/static/pochi/css/time.css" rel="stylesheet" type="text/css" />
 
         {% block links %}{% endblock %}
 	</head>
 
 	<body>
+        {% load static %}
+        {% load notifications_tags %}
 		<!-- WRAPPER -->
 		<div id="wrapper" class="clearfix">
 			<!--
@@ -240,6 +243,12 @@
                             {% endfor %}
                         </ul>
                     {% endif %}
+
+                    <time datetime="{% now 'Y-m-d' %}" class="icon">
+                        <em>{% now 'l' %}</em>
+                        <strong>{% now 'F' %}</strong>
+                        <span>{% now 'd' %}</span>
+                    </time>
 				</nav>
 				<span id="asidebg"><!-- aside fixed background --></span>
 			</aside>
@@ -278,8 +287,9 @@
                                 <li><a>POCHI ID:<br>{{ profile.profile_id }}</a></li>
                                 <li class="divider"></li>
 								<li>
-									<a href=""><i class="fa fa-envelope"></i> Notifications
-										<span class="pull-right label label-default">0</span>
+									<a href="{% url 'unread' %}">
+                                        <i class="fa fa-envelope"></i> Notifications
+                                        <span class="pull-right label label-info">{% live_notify_badge %}</span>
 									</a>
 								</li>
 								<li>
@@ -326,6 +336,15 @@
 		<!-- JAVASCRIPT FILES -->
 		<script type="text/javascript" src="/static/pochi/plugins/jquery/jquery-2.2.3.min.js"></script>
 		<script type="text/javascript" src="/static/pochi/js/app.js"></script>
+        <script src="{% static 'notifications/notify.js' %}" type="text/javascript"></script>
+        {% register_notify_callbacks callbacks='fill_notification_list,fill_notification_badge' %}
+		<script type="text/javascript">
+            {% notifications_unread as unread_count %}
+            {% if unread_count %}
+                _toastr("Welcome {{ user.get_short_name }}, you have {{ unread_count }} unread notifications.",
+                    "top-right","info",false, {timeOut: 5000});
+            {% endif %}
+        </script>
         {% block scripts %}{% endblock %}
 	</body>
 </html>
