--- a/fimco/pochi/templates/pochi/pochi2pochi.html
+++ b/fimco/pochi/templates/pochi/pochi2pochi.html
@@ -6,37 +6,45 @@
     <section id="middle">
         <div id="content" class="padding-20">
             <div class="row">
-                <div id="success" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-sm">
-                        <div class="modal-content">
-                            <div class="modal-body modal-success text-center">
-                                <p><strong><i class="glyphicon glyphicon-thumbs-up"></i> {{ message }}</strong></p>
-                                <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
+                {% if messages %}
+                    {% for message in messages %}
+                        {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+                            <div id="success" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-sm">
+                                    <div class="modal-content">
+                                        <div class="modal-body modal-success text-center">
+                                            <p><strong><i class="glyphicon glyphicon-thumbs-up"></i> {{ message }}</strong></p>
+                                            <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="info" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-sm">
-                        <div class="modal-content">
-                            <div class="modal-body modal-info text-center">
-                                <p><strong><i class="glyphicon glyphicon-info-sign"></i> {{ message }}</strong></p>
-                                <a href="{% url 'confirm' %}" class="btn btn-info btn-sm">Proceed withdrawal</a>
-                                <button type="button" class="btn btn-info" data-dismiss="modal">OK</button>
+                        {% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
+                            <div id="info" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-sm">
+                                    <div class="modal-content">
+                                        <div class="modal-body modal-info text-center">
+                                            <p><strong><i class="glyphicon glyphicon-info-sign"></i> {{ message }}</strong></p>
+                                            <a href="{% url 'confirm' %}" class="btn btn-info btn-sm">Proceed transfer</a>
+                                            <button type="button" class="btn btn-info" data-dismiss="modal">Cancel</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="error" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-sm">
-                        <div class="modal-content">
-                            <div class="modal-body modal-danger text-center">
-                                <p><strong><i class="glyphicon glyphicon-thumbs-down"></i> {{ message }}</strong></p>
-                                <button type="button" class="btn btn-danger" data-dismiss="modal">OK</button>
+                        {% elif message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                            <div id="error" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-sm">
+                                    <div class="modal-content">
+                                        <div class="modal-body modal-danger text-center">
+                                            <p><strong><i class="glyphicon glyphicon-thumbs-down"></i> {{ message }}</strong></p>
+                                            <button type="button" class="btn btn-danger" data-dismiss="modal">OK</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
+                        {% endif %}
+                    {% endfor %}
+                {% endif %}
             </div>
             <div class="row">
                 <div class="col-lg-6 col-centered">
@@ -58,11 +66,11 @@
                                 </div>
                                 <div id="mobile-section">
                                     <label>Enter destination mobile number</label>
-                                    <input type="tel" class="form-control masked" name="dest_mobile" data-format="0999999999" data-placeholder="X" placeholder="Mobile number">
+                                    <input type="tel" class="form-control masked" name="dst_mobile" data-format="0999999999" data-placeholder="X" placeholder="Mobile number">
                                 </div>
                                 <div id="account-section">
                                     <label>Enter POCHI destination account</label>
-                                    <input type="text" class="form-control masked" name="dest_account" data-format="**********" data-placeholder="_" placeholder="Account">
+                                    <input type="text" class="form-control masked" name="dst_account" data-format="**********" data-placeholder="_" placeholder="Account">
                                 </div>
                                 <div id="amount-section">
                                     <label>Enter Amount</label>
@@ -81,7 +89,7 @@
     </section>
 {% endblock %}
 {% block scripts %}
-    <script type="text/javascript" src="/static/pochi/plugins/bootstrap/js/bootstrap.min.js"></script>
+{#    <script type="text/javascript" src="/static/pochi/plugins/bootstrap/js/bootstrap.min.js"></script>#}
     <script type="text/javascript">
         $('#account-section').hide();
         var choice = $("#account_choice");
