--- a/fimco/pochi/templates/pochi/withdrawal.html
+++ b/fimco/pochi/templates/pochi/withdrawal.html
@@ -6,48 +6,57 @@
     <section id="middle">
         <div id="content" class="padding-20">
             <div class="row">
-                <div id="success" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-sm">
-                        <div class="modal-content">
-                            <div class="modal-body modal-success text-center">
-                                <p><strong><i class="glyphicon glyphicon-thumbs-up"></i> {{ message }}</strong></p>
-                                <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
+                {% if messages %}
+                    {% for message in messages %}
+                        {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+                            <div id="success" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-sm">
+                                    <div class="modal-content">
+                                        <div class="modal-body modal-success text-center">
+                                            <p><strong><i class="glyphicon glyphicon-thumbs-up"></i> {{ message }}</strong></p>
+                                            <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="info" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-sm">
-                        <div class="modal-content">
-                            <div class="modal-body modal-info text-center">
-                                <p><strong><i class="glyphicon glyphicon-info-sign"></i> {{ message }}</strong></p>
-                                <a href="{% url 'confirm' %}" class="btn btn-info btn-sm">Proceed withdrawal</a>
-                                <button type="button" class="btn btn-info" data-dismiss="modal">OK</button>
+                        {% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
+                            <div id="info" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-sm">
+                                    <div class="modal-content">
+                                        <div class="modal-body modal-info text-center">
+                                            <p><strong><i class="glyphicon glyphicon-info-sign"></i> {{ message }}</strong></p>
+                                            <a href="{% url 'confirm' %}" class="btn btn-info btn-sm">Proceed withdrawal</a>
+                                            <button type="button" class="btn btn-info" data-dismiss="modal">Cancel</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="warning" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-sm">
-                        <div class="modal-content">
-                            <div class="modal-body modal-warning text-center">
-                                <p><strong><i class="glyphicon glyphicon-exclamation-sign"></i> {{ message }}</strong></p>
-                                <a href="{% url 'del_bank' %}" class="btn btn-warning btn-sm margin-top-10">Yes</a>
-                                <button type="button" class="btn btn-warning" data-dismiss="modal">OK</button>
+                        {% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
+                            <div id="warning" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-sm">
+                                    <div class="modal-content">
+                                        <div class="modal-body modal-warning text-center">
+                                            <p><strong><i class="glyphicon glyphicon-exclamation-sign"></i> {{ message }}</strong></p>
+                                            <a href="{% url 'del_bank' %}" class="btn btn-warning btn-sm margin-top-10">Yes</a>
+                                            <button type="button" class="btn btn-warning" data-dismiss="modal">OK</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="error" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-sm">
-                        <div class="modal-content">
-                            <div class="modal-body modal-danger text-center">
-                                <p><strong><i class="glyphicon glyphicon-thumbs-down"></i> {{ message }}</strong></p>
-                                <button type="button" class="btn btn-danger" data-dismiss="modal">OK</button>
+                        {% elif message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                            <div id="error" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-sm">
+                                    <div class="modal-content">
+                                        <div class="modal-body modal-danger text-center">
+                                            <p><strong><i class="glyphicon glyphicon-thumbs-down"></i> {{ message }}</strong></p>
+                                            <button type="button" class="btn btn-danger" data-dismiss="modal">OK</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
+                        {% endif %}
+                    {% endfor %}
+                {% endif %}
             </div>
             {% if not bank_account %}
                 <div class="row">
@@ -105,9 +114,9 @@
                                     <div class="row">
                                         <div class="col-md-6 col-sm-6">
                                             <label>Bank branch address *</label>
-                                            {{ bForm.branch_address }}
-                                            {% if bForm.branch_address.errors %}
-                                                {% for error in bForm.branch_address.errors %}
+                                            {{ bForm.bank_address }}
+                                            {% if bForm.bank_address.errors %}
+                                                {% for error in bForm.bank_address.errors %}
                                                     <div class="alert alert-mini alert-danger mb-30">
                                                         <strong>{{ error|escape }}</strong>
                                                     </div>
@@ -149,7 +158,7 @@
                                 <hr />
                                 <div class="row" style="display: flex;justify-content: space-between;">
                                     <div class="dropdown">
-                                        <a href="{% url 'create_form' 'individual' %}" class="btn btn-primary">Download Blank Form</a>
+                                        <a target="_blank" href="{% url 'create_form' 'individual' %}" class="btn btn-primary">Download Blank Form</a>
                                     </div>
     {#                                <a href="{{ request.META.HTTP_HOST }}{% url '' %}"></a>#}
                                     <div class="fancy-file-upload">
@@ -197,7 +206,7 @@
                             <div class="panel-body">
                                 <p><strong>Full Name:</strong> {{ bank_account.account_name }}</p>
                                 <p><strong>Bank Name:</strong> {{ bank_account.institution_name }}</p>
-                                <p><strong>Branch Name:</strong> {{ bank_account.institution_branchcode }}</p>
+                                <p><strong>Branch Name:</strong> {{ bank_account.institution_branch }}</p>
                                 <p><strong>Account Number:</strong> {{ bank_account.account_number }}</p>
                                 {% if swift %}
                                 <p><strong>SWIFT Code:</strong> {{ swift }}</p>
@@ -216,7 +225,7 @@
 {% endblock %}
 {% block scripts %}
     <script type="text/javascript" src="/static/pochi/js/ajax.js"></script>
-    <script type="text/javascript" src="/static/pochi/plugins/bootstrap/js/bootstrap.min.js"></script>
+{#    <script type="text/javascript" src="/static/pochi/plugins/bootstrap/js/bootstrap.min.js"></script>#}
     <script type="text/javascript">
         $(document).ready(function(){
             {% if messages %}
