--- a/fimco/fimcosite/templates/forgot.html
+++ b/fimco/fimcosite/templates/forgot.html
@@ -2,14 +2,13 @@
 {% block links %}
 {% endblock %}
 {% block content %}
-    <!-- REGISTER -->
     <section>
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-md-8 col-xs-6 col-centered">
                     <div class="card card-default">
                         <div class="card-block">
-                            <form method="POST" action="">
+                            <form method="POST">
                                 <legend>Password reset</legend>
                                 <p class="lead">Forgotten your password? Enter your email address below, and we'll send
                                     you an email allowing you to reset it.
@@ -18,7 +17,14 @@
                                 <div class="form-group">
                                     <label class="control-label" for="id_email">Email</label>
                                     <div>
-                                        <input type="email" name="email" class="form-control" id="id_email" required>
+                                        {{ form.email }}
+                                        {% if form.email.errors %}
+                                            {% for error in form.email.errors %}
+                                                <div class="alert alert-mini alert-danger mb-30">
+                                                    <strong>{{ error|escape }}</strong>
+                                                </div>
+                                            {% endfor %}
+                                        {% endif %}
                                     </div>
                                 </div>
                                 <button class="btn btn-primary float-right">Reset my password</button>
