--- a/fimco/fimcosite/templates/password-reset.html
+++ b/fimco/fimcosite/templates/password-reset.html
@@ -6,47 +6,51 @@
     <section>
         <div class="container">
             <div class="row">
-            {% if messages %}
-                {% for message in messages %}
-                    <div class="col-xs-12 col-centered">
-                        <div class="alert alert-success mb-30">
-                            <h4>Congratulations! <strong>Registration successful!</strong></h4>
-                            <p>{{ message }}</p>
-                            <a href="{% url 'index' %}" class="btn btn-success btn-sm mt-10">OK</a>
-                        </div>
-                    </div>
-                {% endfor %}
-            {% endif %}
-            </div>
-            <div class="row">
                 <div class="col-lg-4 col-md-6 col-xs-6 col-centered">
                     <div class="card card-default">
                         <div class="card-block">
-{#                            <form method="POST" action="{% url "account_password_reset_token" uidb36=uidb36 token=token %}">#}
-                            <form method="POST" action="">
-                                <legend>Set your new password</legend>
-                                {% csrf_token %}
-                                <div class="form-group">
-                                    <label class="control-label" for="id_password">New Password</label>
-                                    <div>
-                                        <input type="password" name="password" class="form-control" id="id_password" required>
+                            {% if validlink %}
+                                <form method="POST" action="{% url 'password_reset_complete' %}">
+                                    <legend>Set your new password</legend>
+                                    {% csrf_token %}
+                                    <div class="form-group">
+                                        <label class="control-label" for="id_password">New Password</label>
+                                        <div>
+                                            {{ form.new_password1 }}
+                                            {% if form.new_password1.errors %}
+                                                {% for error in form.new_password1.errors %}
+                                                    <div class="alert alert-mini alert-danger mb-30">
+                                                        <strong>{{ error|escape }}</strong>
+                                                    </div>
+                                                {% endfor %}
+                                            {% endif %}
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="control-label" for="id_verify">New Password (again)</label>
-                                    <div>
-                                        <input type="password" name="password" class="form-control" id="id_verify" required>
+                                    <div class="form-group">
+                                        <label class="control-label" for="id_verify">New Password (again)</label>
+                                        <div>
+                                            {{ form.new_password2 }}
+                                            {% if form.new_password2.errors %}
+                                                {% for error in form.new_password2.errors %}
+                                                    <div class="alert alert-mini alert-danger mb-30">
+                                                        <strong>{{ error|escape }}</strong>
+                                                    </div>
+                                                {% endfor %}
+                                            {% endif %}
+                                        </div>
                                     </div>
-                                </div>
-                                <button class="btn btn-primary float-right">Save</button>
-                            </form>
+                                    <button class="btn btn-primary float-right">Save</button>
+                                </form>
+                            {% else %}
+                                <p>
+                                    The password reset link was invalid, possibly because it has already been used.
+                                    Please request a new password reset.
+                                </p>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-{% endblock %}
-
-{% block scripts %}
 {% endblock %}
