update 1.0.8 ...login check

--- a/fimco/fimcosite/templates/base.html
+++ b/fimco/fimcosite/templates/base.html
@@ -5,7 +5,7 @@
         <title>FIMCO</title>
 
         <meta name="description" content="" />
-        <meta name="Arthur" content="FIMCO [www.fimco.co.tz]" />
+        <meta name="Author" content="FIMCO [www.fimco.co.tz] Arthur David" />
 
         <!-- mobile settings -->
         <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0" />
@@ -210,7 +210,7 @@
 
 
 		<!-- JAVASCRIPT FILES -->
-		<script type="text/javascript">var plugin_path = '/static/plugins/';</script>
+		<!--<script type="text/javascript">var plugin_path = '/static/plugins/';</script>-->
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"
                 integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
                 crossorigin="anonymous"></script>
